@@ -900,7 +900,15 @@ class Transaction extends EventEmitter {
 
     this._aborted = false
     this._rollbackRequested = false
-    this.isolationLevel = isolationLevel || this.isolationLevel
+    if (isolationLevel) {
+      if (Object.keys(ISOLATION_LEVEL).some(key => {
+        return ISOLATION_LEVEL[key] === isolationLevel
+      })) {
+        this.isolationLevel = isolationLevel
+      } else {
+        throw new TransactionError('Invalid isolation level.')
+      }
+    }
 
     setImmediate(callback)
   }
