@@ -73,6 +73,8 @@ describe('tedious', () => {
     it('prepared statement in transaction', done => TESTS['prepared statement in transaction'](done))
     it('transaction with rollback', done => TESTS['transaction with rollback'](done))
     it('transaction with commit', done => TESTS['transaction with commit'](done))
+    it('transaction throws on bad isolation level', done => TESTS['transaction throws on bad isolation level'](done))
+    it('transaction accepts good isolation levels', done => TESTS['transaction accepts good isolation levels'](done))
     it('transaction with error (XACT_ABORT set to ON)', done => TESTS['transaction with error'](done))
     it('transaction with synchronous error', done => TESTS['transaction with synchronous error'](done))
     it('cancel request', done => TESTS['cancel request'](done, /Canceled./))
